--- a/docker/angular/docker-compose.yml
+++ b/docker/angular/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   mongodb:
     image: mongo:7.0
-    restart: unless-stopped
+    restart: always
     container_name: angular_mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
