--- a/site/package.json
+++ b/site/package.json
@@ -2,12 +2,11 @@
   "name": "project-aw",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 4200",
-    "debug": "npm install && npm run start",
-    "build": "ng build",
-    "watch": "ng build --watch",
-    "test": "ng test"
+    "ng": "npm install && ng",
+    "start": "npm install && ng serve --host 0.0.0.0 --port 4200",
+    "build": "npm install && ng build",
+    "watch": "npm install && ng build --watch",
+    "test": "npm install && ng test"
   },
   "private": true,
   "dependencies": {
