--- a/site/package.json
+++ b/site/package.json
@@ -1,8 +1,10 @@
 {
   "name": "equipment_angular",
   "scripts": {
-    "ng": "npm install && ng",
-    "start": "npm install && ng serve --host 0.0.0.0 --port 4200",
+    "prettier": "npm install && prettier --write .",
+    "lint": "npm install && eslint --ext .ts .",
+    "format": "npm install && eslint --fix --ext .ts .",
+    "debug": "npm install && ng serve --host 0.0.0.0 --port 4200",
     "build": "npm install && ng build",
     "watch": "npm install && ng build --watch",
     "test": "npm install && ng test"
@@ -26,12 +28,17 @@
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.3.2",
     "typescript": "~5.4.2"
   }
 }
