--- a/docker/database/compose.yml
+++ b/docker/database/compose.yml
@@ -1,15 +1,18 @@
-version: '3'
-
 services:
-  mongodb:
-    image: mongo:7.0
-    restart: always
-    container_name: equipment_mongodb
+  mongo:
+    image: mongo:7
+    container_name: equipment_mongo
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITDB_DATABASE: equipment
-    ports:
-      - "27018:27017"
+    networks:
+      - network
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+
+networks:
+  network:
+    driver: bridge
+    name: equipment_network
