--- a/API/package.json
+++ b/API/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "equipment_express",
+  "name": "express",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "lint": "npm install && eslint --ext .js .",
-    "format": "npm install && eslint --fix --ext .js .",
-    "debug": "npm install && nodemon",
-    "start": "npm install && node index.js"
+    "lint": "eslint --ext .js .",
+    "format": "eslint --fix --ext .js .",
+    "debug": "nodemon",
+    "start": "node index.js"
   },
   "dependencies": {
     "auth-header": "1",
