--- a/site/package.json
+++ b/site/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "equipment_angular",
+  "name": "angular",
   "scripts": {
-    "prettier": "npm install && prettier --write .",
-    "lint": "npm install && eslint --ext .ts .",
-    "format": "npm install && eslint --fix --ext .ts .",
-    "debug": "npm install && ng serve --host 0.0.0.0 --port 4200",
-    "build": "npm install && ng build",
-    "watch": "npm install && ng build --watch",
-    "test": "npm install && ng test"
+    "prettier": "prettier --write .",
+    "lint": "eslint --ext .ts .",
+    "format": "eslint --fix --ext .ts .",
+    "debug": "ng serve --host 0.0.0.0 --port 4200",
+    "build": "ng build",
+    "watch": "ng build --watch",
+    "test": "ng test"
   },
   "dependencies": {
     "@angular/animations": "^17.3.0",
