--- a/angular/package.json
+++ b/angular/package.json
@@ -1,10 +1,9 @@
 {
   "name": "angular",
   "scripts": {
-    "prettier": "prettier --write .",
     "lint": "eslint --ext .ts .",
     "format": "eslint --fix --ext .ts .",
-    "debug": "ng serve --host 0.0.0.0 --port 4200",
+    "debug": "npm run format && ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build",
     "watch": "ng build --watch",
     "test": "ng test"
@@ -38,7 +37,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.3.2",
     "typescript": "~5.4.2"
   },
   "private": true
