--- a/express/package.json
+++ b/express/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint --ext .js .",
     "format": "eslint --fix --ext .js .",
-    "debug": "nodemon",
+    "debug": "npm run format && nodemon",
     "start": "node index.js"
   },
   "dependencies": {
