--- a/compose.yml
+++ b/compose.yml
@@ -46,6 +46,7 @@ services:
     volumes:
       - ./angular:/app:ro
       - angular_node_modules_volume:/app/node_modules:rw
+      - angular_dist_volume:/app/dist:rw
       - angular_browser_volume:/app/dist/browser:rw
 
 networks:
@@ -60,5 +61,7 @@ volumes:
     name: equipment_express_node_modules_volume
   angular_node_modules_volume:
     name: equipment_angular_node_modules_volume
+  angular_dist_volume:
+    name: equipment_angular_dist_volume
   angular_browser_volume:
     name: equipment_angular_browser_volume
