--- a/compose.yml
+++ b/compose.yml
@@ -3,13 +3,10 @@ services:
     image: mongo:7-jammy
     container_name: equipment_mongo
     restart: unless-stopped
-    environment:
-      - TZ=Europe/Paris
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=root
-      - MONGO_INITDB_DATABASE=equipment
+    env_file:
+      - ./mongo/.env
     networks:
-      - network
+      - mongo_network
     volumes:
       - mongo_data_volume:/data/db:rw
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
@@ -25,10 +22,9 @@ services:
         npm install --no-save &&
         npm run start
       "
-    environment:
-      - TZ=Europe/Paris
     networks:
-      - network
+      - express_network
+      - mongo_network
     volumes:
       - ./express/:/app/:ro
       - express_node_modules_volume:/app/node_modules:rw
@@ -41,8 +37,6 @@ services:
         npm install --no-save &&
         npm run build
       "
-    environment:
-      - TZ=Europe/Paris
     volumes:
       - ./angular:/app:ro
       - angular_node_modules_volume:/app/node_modules:rw
@@ -50,9 +44,12 @@ services:
       - angular_browser_volume:/app/dist/browser:rw
 
 networks:
-  network:
+  mongo_network:
     driver: bridge
-    name: equipment_network
+    name: equipment_mongo_network
+  express_network:
+    driver: bridge
+    name: equipment_express_network
 
 volumes:
   mongo_data_volume:
