--- a/angular/package.json
+++ b/angular/package.json
@@ -10,34 +10,34 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "mongodb": "^6.5.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "@angular/animations": "17",
+    "@angular/common": "17",
+    "@angular/compiler": "17",
+    "@angular/core": "17",
+    "@angular/forms": "17",
+    "@angular/platform-browser": "17",
+    "@angular/platform-browser-dynamic": "17",
+    "@angular/router": "17",
+    "mongodb": "6",
+    "rxjs": "7",
+    "tslib": "2",
+    "zone.js": "0.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.2",
-    "@angular/cli": "^17.3.2",
-    "@angular/compiler-cli": "^17.3.0",
-    "@types/jasmine": "~5.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "@angular-devkit/build-angular": "17",
+    "@angular/cli": "17",
+    "@angular/compiler-cli": "17",
+    "@types/jasmine": "5",
+    "eslint": "8",
+    "eslint-config-airbnb-base": "15",
+    "eslint-config-airbnb-typescript": "18",
+    "eslint-plugin-import": "2",
+    "jasmine-core": "5",
+    "karma": "6",
+    "karma-chrome-launcher": "3",
+    "karma-coverage": "2",
+    "karma-jasmine": "5",
+    "karma-jasmine-html-reporter": "2",
+    "typescript": "5"
   }
 }
